[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bigbullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/bigShuriken.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CircleShape2D" id=4]
radius = 12.0

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.31 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 14.0

[node name="Bigbullet" type="RigidBody2D"]
pause_mode = 2
material = SubResource( 1 )
z_index = 7
collision_layer = 4
collision_mask = 0
mass = 0.00102041
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.0823529, 1, 0.854902, 1 )
self_modulate = Color( 0, 0.780392, 0.843137, 1 )
material = SubResource( 3 )
amount = 3
lifetime = 0.3
speed_scale = 3.0
explosiveness = 0.27
randomness = 0.24
local_coords = false
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
angle = 720.0
angle_random = 1.0
color = Color( 0.027451, 0.596078, 0.937255, 1 )

[node name="sprite" type="Sprite" parent="."]
rotation = -2.55655
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "spin"
playback_speed = 5.0
anims/idle = SubResource( 5 )
anims/shutdown = SubResource( 6 )
anims/spin = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_Bigbullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
